--- a/Site/telaInicial.html
+++ b/Site/telaInicial.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Life, My Playlist</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="assets/Wackypixel-Lesters-Electric-Guitar-Burst-Guitar.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/icons/Wackypixel-Lesters-Electric-Guitar-Burst-Guitar.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -17,10 +17,10 @@
                     <h1>My Life, My Playlist</h1>
                     <nav>
                         <ul>
-                            <li><a href="#home">Home</a></li>
+                            <li><a href="telaInicial.html">Home</a></li>
                             <li><a href="#sobreMim">Sobre Mim</a></li>
-                            <li><a href="#entrar">Entrar</a></li>
-                            <li><a href="#cadastre-se">Cadastre-se</a></li>
+                            <li><a href="login.html">Entrar</a></li>
+                            <li><a href="telaCadastro.html">Cadastre-se</a></li>
                         </ul>
                     </nav>
                 </div>
