adicionado novas telas ao site e remoção de pasta com arquivos que não serão utilizados

--- a/Site/login.html
+++ b/Site/login.html
@@ -12,12 +12,10 @@
         <div class="fundo">
             <header>
                 <div class="container">
-                    <h1>My Life, My Playlist</h1>
+                    <h1><a href="telaInicial.html">My Life, My Playlist</a></h1>
                     <nav>
                         <ul>
                             <li><a href="telaInicial.html">Home</a></li>
-                            <li><a href="#sobreMim">Sobre Mim</a></li>
-                            <li><a href="login.html">Entrar</a></li>
                             <li><a href="telaCadastro.html">Cadastre-se</a></li>
                         </ul>
                     </nav>
@@ -34,6 +32,7 @@
                     <p>Senha:</p>
                     <p><input type="password" id="input_senhaUsuario" placeholder="Digite sua senha"></p>
                     <a href="index.html" class="botaoLogin">Login</a>
+                    <p>Ainda não tem uma conta? <a href="telaCadastro.html">Cadastre-se</a></p>
                 </section>
                 </div>
                 </div>
