--- a/Site/telaCadastro.html
+++ b/Site/telaCadastro.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="assets/icons/Wackypixel-Lesters-Electric-Guitar-Burst-Guitar.ico"
         type="image/x-icon">
-    <title>Login</title>
+    <title>Cadastro</title>
 </head>
 
 <body>
@@ -15,13 +15,11 @@
         <div class="fundo">
             <header>
                 <div class="container">
-                    <h1>My Life, My Playlist</h1>
+                    <h1><a href="telaInicial.html">My Life, My Playlist</a></h1>
                     <nav>
                         <ul>
                             <li><a href="telaInicial.html">Home</a></li>
-                            <li><a href="#sobreMim">Sobre Mim</a></li>
                             <li><a href="login.html">Entrar</a></li>
-                            <li><a href="#cadastre-se">Cadastre-se</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -55,7 +53,7 @@
                                 </p>
                             </div>
                         </div>
-                        <a href="index.html" class="botaoLogin">Login</a>
+                        <a href="login.html" class="botaoLogin">Cadastrar</a>
                     </section>
                 </div>
         </div>
