--- a/Site/telaInicial.html
+++ b/Site/telaInicial.html
@@ -14,11 +14,9 @@
         <div class="fundo">
             <header>
                 <div class="container">
-                    <h1>My Life, My Playlist</h1>
+                    <h1><a href="telaInicial.html">My Life, My Playlist</a></h1>
                     <nav>
                         <ul>
-                            <li><a href="telaInicial.html">Home</a></li>
-                            <li><a href="#sobreMim">Sobre Mim</a></li>
                             <li><a href="login.html">Entrar</a></li>
                             <li><a href="telaCadastro.html">Cadastre-se</a></li>
                         </ul>
