inserção de vídeo

--- a/Site/curiosidades.html
+++ b/Site/curiosidades.html
@@ -49,10 +49,9 @@
 
                     <h1>3.Música e Memória</h1>
                     <p>A música pode evocar memórias emocionais. Pesquisas indicam que a música está ligada ao
-                        sistema límbico, que desempenha <br>
+                        sistema límbico, que desempenha 
                         um papel crucial na emoção e memória. Por exemplo, um estudo da Universidade de Nova York
-                        descobriu que músicas associadas <br>
-                        a experiências passadas podem evocar lembranças vívidas. </p>
+                        descobriu que músicas associada a experiências passadas podem evocar lembranças vívidas. </p>
                     <hr class="divide">
 
                     <h1>4.Efeito na Ansiedade e Estresse</h1>
