--- a/Site/index.html
+++ b/Site/index.html
@@ -105,6 +105,13 @@
                         E se torna ainda mais especial, pois o primeiro show que fui na minha vida, foi o deles, algo que nunca achei
                         que seria possível, ver minha banda preferida desde garoto, ao vivo, foi algo muito importante que me marcou muito. 
                     </p>
+                    <br>
+
+                    <p>Este é um dos meus registros do show, de uma das músicas mais bonitas da banda.
+                        Vale ressaltar a conexão entre a banda e os espectadores, algo muito emocionante.
+                    </p>
+
+                    <p><video src="assets/video/Vídeo de Giovanni Torres.mp4" controls height="600px"></video></p>
                     
 
                 </div>
