--- a/Site/questionario.html
+++ b/Site/questionario.html
@@ -80,6 +80,7 @@
                             <option value="#"></option>
                             <option value="refletir">Refletir</option>
                             <option value="lazer">Lazer</option>
+                            <option value="ambos">Ambos</option>
                         </select>
 
                     <div class="pergunta">
@@ -99,7 +100,6 @@
                                 <option value="#"></option>
                                 <option value="sim">Sim</option>
                                 <option value="nao">Não</option>
-                                <option value="talvez">Talvez</option>
                             </select>
 
                         <div class="pergunta">
