--- a/Site/public/index.html
+++ b/Site/public/index.html
@@ -23,6 +23,7 @@
                             <li><a href="index.html">Sobre Mim</a></li>
                             <li><a href="questionario.html">Questionário</a></li>
                             <li><a href="curiosidades.html">Curiosidades</a></li>
+                            <li><a href="dashboard.html">Dashboard</a></li>
                         </ul>
                     </nav>
                 </div>
